# western_digital_project

demo_code/: .env.example  .gitignore  COMPARISON.md  PERFORMANCE_TIPS.md  README.md  SETUP_COMPLETE.md  example_usage.py  pyproject.toml  quickstart.sh  requirements.txt  unified_demo.py
demo_code/data/docs_cache/: docs_20251105_005138.json  docs_20251105_050421.json  docs_20251105_060111.json
demo_code/notebooks/: raptor_code_retrieval.ipynb  raptor_demo_pdf.ipynb  raptor_docs_wiki.ipynb
demo_code/presentation/: PRESENTATION_OUTLINE.md  RAPTOR_EXPLANATION.md  README_PRESENTATION.md  VISUAL_DIAGRAMS.md
demo_code/src/: code_processor.py  config.py  docs_scraper.py  pdf_processor.py  raptor.py  vector_store.py
